feat: add axios dependency and implement table component with basic structure and problem with CORs

--- a/docs/TODO
+++ b/docs/TODO
@@ -15,4 +15,5 @@ Fase 2:
 
 Fase 3:
   Estilização da aplicação
-  ☐ Aplicar estilos nos componentes;
+  ☐ Aplicar estilos básico nos componentes com shadcn; @2.5h @link:https://ui.shadcn.com/docs/components
+  
